--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
+# ?? CORS ? cookie ??
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.secure=true
 
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect # \u4E0D\u7528\u8A2D\u5B9A\uFF0CSpring Boot \u6703\u81EA\u52D5\u8A2D\u5B9A
 # spring.jpa.open-in-view=false
