--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=mountaineer-back
 
 # mysql \u914D\u7F6E
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
+spring.datasource.url=jdbc:mysql://localhost:3306/mountaineer?useSSL=false&serverTimezone=Asia/Taipei&useLegacyDatetimeCode=false
 #spring.datasource.url=jdbc:mysql://host.docker.internal:3306/cart?useSSL=false&serverTimezone=Asia/Taipei&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-spring.datasource.username=${MYSQL_USERNAME}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.username=root
+spring.datasource.password=abc123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA \u914D\u7F6E
@@ -16,7 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-# ?? CORS ? cookie ??
+# \u914D\u7F6E CORS \u548C cookie \u8A2D\u7F6E
 server.servlet.session.cookie.same-site=None
 server.servlet.session.cookie.secure=true
 
