--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=mountaineer-back
 
 # mysql \u914D\u7F6E
-spring.datasource.url=jdbc:mysql://localhost:3306/mountaineer?useSSL=false&serverTimezone=Asia/Taipei&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}
 #spring.datasource.url=jdbc:mysql://host.docker.internal:3306/cart?useSSL=false&serverTimezone=Asia/Taipei&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=abc123
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # JPA \u914D\u7F6E
 # \u81EA\u52D5\u66F4\u65B0\u8868\u7D50\u69CB\uFF0C\u53EF\u6839\u64DA\u9700\u8981\u8A2D\u7F6E\u70BA create, update, validate, none
